--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>¿Quieres ser mi San Valentín? 🎮</title>
+    <title>Feliz Día de la Amistad 🎮</title>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&family=Dancing+Script:wght@600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -16,15 +16,12 @@
         <div class="main-content">
             <div class="pixel-border">
                 <div class="game-title">
-                    <h1 class="valentine-title">💝 ¿Quieres ser mi San Valentín? 💝</h1>
+                    <h1 class="valentine-title">💙 Feliz Día de la Amistad 💙</h1>
                 </div>
                 
-                <div class="button-container">
-                    <button id="yesBtn" class="valentine-btn yes-btn">
-                        <span class="btn-text">SÍ 💕</span>
-                    </button>
-                    <button id="noBtn" class="valentine-btn no-btn">
-                        <span class="btn-text">NO</span>
+                <div class="friendship-message">
+                    <button id="showLetterBtn" class="friendship-btn">
+                        <span class="btn-text">💙 Ver Mensaje de Amistad 💙</span>
                     </button>
                 </div>
                 
