cambios en la carta

--- a/index.html
+++ b/index.html
@@ -20,8 +20,23 @@
                 </div>
                 
                 <div class="friendship-message">
-                    <button id="showLetterBtn" class="friendship-btn">
-                        <span class="btn-text">💙 Ver Mensaje de Amistad 💙</span>
+                    <button id="showLetterBtn" class="friendship-btn gift-box-btn">
+                        <div class="gift-box">
+                            <div class="box-lid">
+                                <div class="ribbon">🎀</div>
+                            </div>
+                            <div class="box-body">
+                                <div class="heart-reveal">💙</div>
+                            </div>
+                            <div class="confetti">
+                                <div class="confetti-piece"></div>
+                                <div class="confetti-piece"></div>
+                                <div class="confetti-piece"></div>
+                                <div class="confetti-piece"></div>
+                                <div class="confetti-piece"></div>
+                                <div class="confetti-piece"></div>
+                            </div>
+                        </div>
                     </button>
                 </div>
                 
