--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Pantalla de introducción especial para el 14 de febrero -->
+    <div id="introOverlay" class="intro-overlay">
+        <div class="intro-sparkles" id="introSparkles"></div>
+        <div class="intro-hearts" id="introHearts"></div>
+        <div class="intro-content">
+            <div class="intro-heart" id="introHeart">💙</div>
+            <h1 class="intro-title">Feliz 14 de Febrero</h1>
+            <p class="intro-subtitle">Para alguien muy especial</p>
+            <div class="intro-instruction" id="introClick">💝 Toca para abrir 💝</div>
+        </div>
+    </div>
+
+    <!-- Pantalla de apertura -->
+    <div id="openingOverlay" class="opening-overlay">
+        <div class="opening-heart">💕</div>
+        <div class="opening-text">Abriendo tu carta...</div>
+    </div>
+
     <div class="game-container">
     <div class="flowers"></div>
     <div class="hearts"></div>
@@ -19,7 +37,7 @@
                     <h1 class="valentine-title">💙 Feliz Día de la Amistad 💙</h1>
                 </div>
                 
-                <div class="friendship-message">
+                <div class="friendship-message" style="display: none;">
                     <button id="showLetterBtn" class="friendship-btn gift-box-btn">
                         <div class="gift-box">
                             <div class="box-lid">
