Actualizacion de carta para Yulieth con nueva cancion

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="intro-heart-arrow pos2" id="heartArrow2">💗</div>
         
         <div class="intro-content">
-            <div class="intro-heart" id="introHeart">💙</div>
+            <div class="intro-heart" id="introHeart">❤️</div>
             <h1 class="intro-title">Feliz 14 de Febrero</h1>
             <p class="intro-subtitle">Para alguien muy especial</p>
             <div class="intro-instruction" id="introClick">💝 Toca para abrir 💝</div>
@@ -43,7 +43,7 @@
         <div class="main-content">
             <div class="pixel-border">
                 <div class="game-title">
-                    <h1 class="valentine-title">💙 Feliz Día de la Amistad 💙</h1>
+                    <h1 class="valentine-title">❤️ Feliz Día de la Amistad ❤️</h1>
                 </div>
                 
                 <div class="friendship-message" style="display: none;">
@@ -53,7 +53,7 @@
                                 <div class="ribbon">🎀</div>
                             </div>
                             <div class="box-body">
-                                <div class="heart-reveal">💙</div>
+                                <div class="heart-reveal">❤️</div>
                             </div>
                             <div class="confetti">
                                 <div class="confetti-piece"></div>
